[gd_scene load_steps=48 format=3 uid="uid://be5cjahr4jdmy"]

[ext_resource type="Script" uid="uid://cgin203j5lihw" path="res://technical/events/roshambo.gd" id="1_j22tn"]
[ext_resource type="Texture2D" uid="uid://c5pxii3mw3a7c" path="res://assets/images/events/roshambo/wall.png" id="2_sm0v0"]
[ext_resource type="Texture2D" uid="uid://ckwl1ygxnc6vv" path="res://assets/images/events/roshambo/roShambo/003.png" id="3_ptngl"]
[ext_resource type="Texture2D" uid="uid://c8uws48kgf6ta" path="res://assets/images/events/roshambo/roShambo/004.png" id="4_0262e"]
[ext_resource type="Texture2D" uid="uid://ryrlssh7wpou" path="res://assets/images/events/roshambo/roShambo/000.png" id="5_bij6d"]
[ext_resource type="Texture2D" uid="uid://6t40lrfkcclt" path="res://assets/images/events/roshambo/roShambo/001.png" id="6_hmdoj"]
[ext_resource type="Texture2D" uid="uid://bucepb3oy8gmh" path="res://assets/images/events/minigameTitle.png" id="6_k83l3"]
[ext_resource type="Texture2D" uid="uid://sn2vh6yb4153" path="res://assets/images/events/filledStar.png" id="7_2450w"]
[ext_resource type="Texture2D" uid="uid://csy6iap3166vc" path="res://assets/images/events/roshambo/roShambo/002.png" id="7_gox4l"]
[ext_resource type="Texture2D" uid="uid://bsjnsxl2xs2j0" path="res://assets/images/events/unfilledStar0.png" id="8_0y3vr"]
[ext_resource type="Texture2D" uid="uid://bl7x3uwsrujst" path="res://assets/images/events/roshambo/roShambo/005.png" id="8_ks0dc"]
[ext_resource type="Texture2D" uid="uid://n4fjjq8ir18y" path="res://assets/images/events/unfilledStar1.png" id="9_lvb84"]
[ext_resource type="Texture2D" uid="uid://duk5afukfxuak" path="res://assets/images/events/roshambo/roShambo/006.png" id="9_u5ki6"]
[ext_resource type="AudioStream" uid="uid://doov5lqi3y5cd" path="res://assets/sounds/fuckyeah.ogg" id="10_nbj6u"]
[ext_resource type="Texture2D" uid="uid://dah40budw8w48" path="res://assets/images/events/roshambo/table.png" id="10_xsuci"]
[ext_resource type="Texture2D" uid="uid://bhankmyxjb3gv" path="res://assets/images/events/roshambo/light.png" id="11_52bd5"]
[ext_resource type="Texture2D" uid="uid://6nno2cik65i4" path="res://assets/images/events/fuckYeah.png" id="11_x7jwk"]
[ext_resource type="Theme" uid="uid://dr1wna4c2ab2h" path="res://technical/textStyle.tres" id="12_mdx1n"]
[ext_resource type="Texture2D" uid="uid://v78n30r6dcbx" path="res://assets/images/events/roshambo/icons/X.png" id="13_mk1sm"]
[ext_resource type="AudioStream" uid="uid://dqbejmv3jm3qd" path="res://assets/sounds/awh.ogg" id="14_e13jd"]
[ext_resource type="Texture2D" uid="uid://d4lyhj85b063i" path="res://assets/images/events/roshambo/pick.png" id="16_i2j73"]
[ext_resource type="Texture2D" uid="uid://che234t0fdp5q" path="res://assets/images/events/roshambo/names/roshambo.png" id="18_mahty"]
[ext_resource type="Texture2D" uid="uid://db1q1k5ixrumc" path="res://assets/images/events/roshambo/icons/blank.png" id="19_m3kdk"]
[ext_resource type="Texture2D" uid="uid://dunhagweyckaf" path="res://assets/images/events/roshambo/names/you.png" id="20_b7r1e"]
[ext_resource type="Texture2D" uid="uid://bf4m13k5hvonm" path="res://assets/images/events/roshambo/icons/empty.png" id="21_aocah"]
[ext_resource type="Texture2D" uid="uid://dh7xyvsmynutt" path="res://assets/images/events/roshambo/paper.png" id="24_a50af"]
[ext_resource type="AudioStream" uid="uid://cahd8n2qup8t6" path="res://assets/music/roshambo.ogg" id="25_dedd6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xvyip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ptngl")
}, {
"duration": 1.0,
"texture": ExtResource("4_0262e")
}],
"loop": false,
"name": &"choose",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_bij6d")
}, {
"duration": 1.0,
"texture": ExtResource("6_hmdoj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_gox4l")
}],
"loop": true,
"name": &"lose",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ks0dc")
}, {
"duration": 1.0,
"texture": ExtResource("9_u5ki6")
}],
"loop": true,
"name": &"ponder",
"speed": 3.0
}]

[sub_resource type="Animation" id="Animation_djedu"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("opening/minigameLogo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(565, 993)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("opening/Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-9, 900)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("opening/Star1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(456, 128)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("opening/Star1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("opening/fuckYeah:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 900)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("opening/paper:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 1000)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("nameStats/You/loseShow:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("21_aocah")]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("nameStats/roShambo/loseShow:texture")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("21_aocah")]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("nameStats/roShambo/loseShow:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("nameStats/You/loseShow:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_e3o1v"]
resource_name = "pop"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("opening/minigameLogo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.420448, 1, 2, 1),
"update": 0,
"values": [Vector2(565, 993), Vector2(565, 324), Vector2(565, 324), Vector2(565, -345)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0.607843)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("opening/paper:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 5),
"transitions": PackedFloat32Array(0.297302, 1),
"update": 0,
"values": [Vector2(576, 1000), Vector2(576, 324)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_itsToSIGN"
}]
}

[sub_resource type="Animation" id="Animation_htqen"]
resource_name = "ro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("nameStats/You/loseShow:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("13_mk1sm"), ExtResource("21_aocah")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("nameStats/roShambo/loseShow:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("21_aocah")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("nameStats/roShambo/loseShow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("nameStats/You/loseShow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.34151, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fcjxb"]
resource_name = "title"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("opening/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.450625, 1, 0.420448, 1),
"update": 0,
"values": [Vector2(-9, 900), Vector2(-9, 285), Vector2(-9, 285), Vector2(-9, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.63333, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.607843), Color(0, 0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_allowToMove"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("opening/Star1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3, 3.5),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(456, 128), Vector2(456, 104)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("opening/Star2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.1, 3.6),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(515, 128), Vector2(515, 104)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("opening/Star3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3.2, 3.7),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(574, 128), Vector2(574, 104)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("opening/Star4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3.3, 3.8),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(633, 128), Vector2(633, 104)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("opening/Star5:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3.4, 3.9),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector2(692, 128), Vector2(692, 104)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("opening/Star1:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(3, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("opening/Star2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(3.1, 3.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("opening/Star3:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(3.2, 3.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("opening/Star4:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(3.3, 3.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("opening/Star5:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(3.4, 3.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("opening/paper:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(2.14355, 1),
"update": 0,
"values": [Vector2(576, 324), Vector2(576, 1000)]
}

[sub_resource type="Animation" id="Animation_tlkvl"]
resource_name = "yes"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_endEvent"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("opening/fuckYeah:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 1.5),
"transitions": PackedFloat32Array(0.353553, 1),
"update": 0,
"values": [Vector2(576, 900), Vector2(576, 324)]
}

[sub_resource type="Animation" id="Animation_ce4ur"]
resource_name = "you"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("nameStats/You/loseShow:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("21_aocah")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("nameStats/roShambo/loseShow:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("13_mk1sm"), ExtResource("21_aocah")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("nameStats/roShambo/loseShow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.34151, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("nameStats/You/loseShow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iiqyl"]
_data = {
&"RESET": SubResource("Animation_djedu"),
&"pop": SubResource("Animation_e3o1v"),
&"ro": SubResource("Animation_htqen"),
&"title": SubResource("Animation_fcjxb"),
&"yes": SubResource("Animation_tlkvl"),
&"you": SubResource("Animation_ce4ur")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_4s42o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_2450w")
}],
"loop": true,
"name": &"star",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_0y3vr")
}, {
"duration": 1.0,
"texture": ExtResource("9_lvb84")
}],
"loop": false,
"name": &"unstar",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0464w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4thd4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1fk8o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4vg56"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4votk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_521ol"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5titf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lhyup"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sw2i2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_52lax"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iuk4g"]

[node name="minigame" type="Node2D"]
process_mode = 3
z_index = 100
script = ExtResource("1_j22tn")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_sm0v0")

[node name="roShambo" type="AnimatedSprite2D" parent="."]
position = Vector2(578, 317)
sprite_frames = SubResource("SpriteFrames_xvyip")
animation = &"idle"
frame_progress = 0.79107

[node name="table" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("10_xsuci")

[node name="light" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("11_52bd5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iiqyl")
}

[node name="wins" type="Label" parent="."]
z_index = 1
offset_left = 15.0
offset_top = 458.0
offset_right = 217.0
offset_bottom = 745.0
scale = Vector2(1, 0.6)
theme = ExtResource("12_mdx1n")
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
text = "TURN:
WINS:

ROSHAMBO: 0
YOU: 0"
vertical_alignment = 1

[node name="TURN" type="Label" parent="."]
z_index = 1
offset_left = 289.0
offset_top = 504.0
offset_right = 858.0
offset_bottom = 559.0
scale = Vector2(1, 0.6)
theme = ExtResource("12_mdx1n")
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="nameStats" type="Node2D" parent="."]

[node name="You" type="Sprite2D" parent="nameStats"]
position = Vector2(870, 224)
texture = ExtResource("20_b7r1e")

[node name="container" type="Sprite2D" parent="nameStats/You"]
position = Vector2(-3, 96)
texture = ExtResource("19_m3kdk")

[node name="choice" type="Sprite2D" parent="nameStats/You"]
position = Vector2(-3, 96)
texture = ExtResource("21_aocah")

[node name="loseShow" type="Sprite2D" parent="nameStats/You"]
position = Vector2(-3, 96)
texture = ExtResource("21_aocah")

[node name="pick" type="Sprite2D" parent="nameStats/You"]
position = Vector2(0, 192)
texture = ExtResource("16_i2j73")

[node name="roShambo" type="Sprite2D" parent="nameStats"]
position = Vector2(280, 224)
texture = ExtResource("18_mahty")

[node name="container" type="Sprite2D" parent="nameStats/roShambo"]
position = Vector2(0, 96)
texture = ExtResource("19_m3kdk")

[node name="choice" type="Sprite2D" parent="nameStats/roShambo"]
position = Vector2(0, 96)
texture = ExtResource("21_aocah")

[node name="loseShow" type="Sprite2D" parent="nameStats/roShambo"]
position = Vector2(0, 96)
texture = ExtResource("21_aocah")

[node name="opening" type="Node2D" parent="."]
z_index = 30

[node name="ColorRect" type="ColorRect" parent="opening"]
offset_right = 1162.0
offset_bottom = 652.0
color = Color(0, 0, 0, 1)

[node name="minigameLogo" type="Sprite2D" parent="opening"]
position = Vector2(565, 993)
texture = ExtResource("6_k83l3")

[node name="Label" type="Label" parent="opening"]
offset_left = -9.0
offset_top = 900.0
offset_right = 1152.0
offset_bottom = 969.0
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "the classic game. that i made. because i am the roshambo demon."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Star1" type="AnimatedSprite2D" parent="opening"]
modulate = Color(1, 1, 1, 0)
position = Vector2(456, 128)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="Star2" type="AnimatedSprite2D" parent="opening"]
position = Vector2(515, 104)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="Star3" type="AnimatedSprite2D" parent="opening"]
position = Vector2(574, 104)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="Star4" type="AnimatedSprite2D" parent="opening"]
position = Vector2(633, 104)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="Star5" type="AnimatedSprite2D" parent="opening"]
position = Vector2(692, 104)
sprite_frames = SubResource("SpriteFrames_4s42o")
animation = &"star"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="opening"]
stream = ExtResource("10_nbj6u")

[node name="fuckYeah" type="Sprite2D" parent="opening"]
position = Vector2(576, 900)
texture = ExtResource("11_x7jwk")

[node name="paper" type="Sprite2D" parent="opening"]
position = Vector2(576, 1000)
texture = ExtResource("24_a50af")

[node name="pickChoose" type="Button" parent="."]
offset_left = 809.0
offset_top = 266.0
offset_right = 925.0
offset_bottom = 374.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_0464w")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4thd4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1fk8o")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4vg56")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4votk")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_521ol")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5titf")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lhyup")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sw2i2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_52lax")
theme_override_styles/normal = SubResource("StyleBoxEmpty_iuk4g")
action_mode = 0

[node name="pickButton" type="Button" parent="."]
offset_left = 804.0
offset_top = 381.0
offset_right = 937.0
offset_bottom = 451.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_0464w")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4thd4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1fk8o")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4vg56")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4votk")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_521ol")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5titf")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lhyup")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sw2i2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_52lax")
theme_override_styles/normal = SubResource("StyleBoxEmpty_iuk4g")

[node name="PonderTime" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_dedd6")
autoplay = true
parameters/looping = true

[node name="reactionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_e13jd")
parameters/looping = false

[connection signal="pressed" from="pickChoose" to="." method="_on_pick_choose_pressed"]
[connection signal="pressed" from="pickButton" to="." method="_on_pick_button_pressed"]
[connection signal="timeout" from="PonderTime" to="." method="_on_ponder_time_timeout"]
